fix tests; remove user account username, use email to login

--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,7 @@
 
         <module>server-ocr</module>
         <module>server-web-api</module>
+        <module>server-admin-api</module>
         <module>server-docs</module>
 
     </modules>
