--- a/server-ocr/pom.xml
+++ b/server-ocr/pom.xml
@@ -49,6 +49,19 @@
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>com.jayway.restassured</groupId>
+            <artifactId>rest-assured</artifactId>
+            <version>${rest-assured.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.damnhandy</groupId>
+            <artifactId>handy-uri-templates</artifactId>
+            <version>${handy-uri-templates.version}</version>
+            <scope>test</scope>
+        </dependency>
+
     </dependencies>
 
     <build>
