--- a/rest-site/pom.xml
+++ b/rest-site/pom.xml
@@ -17,6 +17,11 @@
     <dependencies>
         <dependency>
             <groupId>com.openprice</groupId>
+            <artifactId>openprice-domain-account</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.openprice</groupId>
             <artifactId>openprice-rest-common</artifactId>
             <version>${project.version}</version>
         </dependency>
