--- a/rest-user/pom.xml
+++ b/rest-user/pom.xml
@@ -33,7 +33,7 @@
         </dependency>
         <dependency>
             <groupId>com.openprice</groupId>
-            <artifactId>openprice-rest-site</artifactId>
+            <artifactId>openprice-rest-site</artifactId> <!-- TODO: merge rest-site into rest-user -->
             <version>${project.version}</version>
         </dependency>
 
