--- a/rest-ocr/pom.xml
+++ b/rest-ocr/pom.xml
@@ -8,26 +8,21 @@
         <version>0.0.3</version>
     </parent>
 
-    <artifactId>openprice-rest-admin</artifactId>
+    <artifactId>openprice-rest-ocr</artifactId>
     <packaging>jar</packaging>
 
-    <name>Admin Rest API Module</name>
-    <description>OpenPrice Rest API module for admin management.</description>
+    <name>OCR Service Rest API Module</name>
+    <description>OpenPrice Rest API code for OCR service.</description>
 
     <dependencies>
         <dependency>
             <groupId>com.openprice</groupId>
-            <artifactId>openprice-domain-admin-account</artifactId>
+            <artifactId>openprice-api-common</artifactId>
             <version>${project.version}</version>
         </dependency>
         <dependency>
             <groupId>com.openprice</groupId>
-            <artifactId>openprice-domain-account</artifactId>
-            <version>${project.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>com.openprice</groupId>
-            <artifactId>openprice-domain-receipt</artifactId>
+            <artifactId>openprice-infrastructure</artifactId>
             <version>${project.version}</version>
         </dependency>
 
@@ -45,56 +40,23 @@
             <scope>test</scope>
         </dependency>
 
-        <!-- Use DBUnit and Spring Test DBUnit for integration test -->
         <dependency>
-            <groupId>org.dbunit</groupId>
-            <artifactId>dbunit</artifactId>
-            <version>${dbunit.version}</version>
-            <type>jar</type>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
-        <dependency>
-            <groupId>com.github.springtestdbunit</groupId>
-            <artifactId>spring-test-dbunit</artifactId>
-            <version>${spring-test-dbunit.version}</version>
-            <scope>test</scope>
-        </dependency>
-
-        <!-- Use RESTAssured to test RESTful API -->
         <dependency>
             <groupId>com.jayway.restassured</groupId>
             <artifactId>rest-assured</artifactId>
             <version>${rest-assured.version}</version>
             <scope>test</scope>
         </dependency>
-
         <dependency>
             <groupId>com.jayway.jsonpath</groupId>
             <artifactId>json-path</artifactId>
             <scope>test</scope>
         </dependency>
 
-        <!-- use h2 as embedded database for integration test -->
-        <dependency>
-            <groupId>com.h2database</groupId>
-            <artifactId>h2</artifactId>
-            <scope>runtime</scope>
-        </dependency>
-
     </dependencies>
-
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-surefire-plugin</artifactId>
-                <configuration>
-                    <includes>
-                        <include>**/*IT.java</include>
-                    </includes>
-                </configuration>
-            </plugin>
-        </plugins>
-    </build>
 
 </project>
