--- a/server-web-api/pom.xml
+++ b/server-web-api/pom.xml
@@ -54,7 +54,7 @@
     </dependencies>
 
     <build>
-        <finalName>api-server</finalName>
+        <finalName>web-api-server</finalName>
 
         <plugins>
             <plugin>
