--- a/pom.xml
+++ b/pom.xml
@@ -53,6 +53,7 @@
         <docker.image.prefix>openprice</docker.image.prefix>
 
         <spring-restdocs.version>1.0.0.RC1</spring-restdocs.version>
+        <hibernate.version>5.0.1.Final</hibernate.version>
         <jjwt.version>0.5.1</jjwt.version>
         <google-jimfs.version>1.0</google-jimfs.version>
         <evo-inflector.version>1.2.1</evo-inflector.version>
@@ -93,6 +94,11 @@
             <groupId>javax.inject</groupId>
             <artifactId>javax.inject</artifactId>
             <version>1</version>
+        </dependency>
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-java8</artifactId>
+            <version>${hibernate.version}</version>
         </dependency>
     </dependencies>
 
