add docs for /admin

--- a/server-docs/pom.xml
+++ b/server-docs/pom.xml
@@ -32,6 +32,11 @@
         </dependency>
         <dependency>
             <groupId>com.openprice</groupId>
+            <artifactId>openprice-rest-admin</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.openprice</groupId>
             <artifactId>openprice-security</artifactId>
             <version>${project.version}</version>
         </dependency>
