add store and branch rest api

--- a/rest-admin/pom.xml
+++ b/rest-admin/pom.xml
@@ -30,6 +30,11 @@
             <artifactId>openprice-domain-receipt</artifactId>
             <version>${project.version}</version>
         </dependency>
+        <dependency>
+            <groupId>com.openprice</groupId>
+            <artifactId>openprice-domain-store</artifactId>
+            <version>${project.version}</version>
+        </dependency>
 
         <dependency>
             <groupId>com.openprice</groupId>
