add parser-core module and bump version to 0.0.4

--- a/domain-receipt/pom.xml
+++ b/domain-receipt/pom.xml
@@ -22,8 +22,8 @@
         </dependency>
         <dependency>
             <groupId>com.openprice</groupId>
-            <artifactId>parser-simple</artifactId>
-            <version>0.0.1</version>
+            <artifactId>openprice-parser-core</artifactId>
+            <version>${project.version}</version>
         </dependency>
     </dependencies>
 </project>
