--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,7 @@
         <module>email-sendgrid</module>
         <module>security</module>
 
+        <module>parser-core</module>
         <module>domain-common</module>
         <module>domain-account-user</module>
         <module>domain-account-admin</module>
