separate parser stores code to openprice-parser-stores module

--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,8 @@
         <module>security</module>
 
         <module>parser-core</module>
+        <module>parser-stores</module>
+
         <module>domain-common</module>
         <module>domain-account-user</module>
         <module>domain-account-admin</module>
