fix RCSS1 parser

--- a/parser-stores/src/main/resources/config/RCSS/RCSS1/headerConfig.properties
+++ b/parser-stores/src/main/resources/config/RCSS/RCSS1/headerConfig.properties
@@ -16,7 +16,7 @@ DateHeader=
 DateHeader2= REDEEM HERE FOR FREE GROCERIES**
 DepositHeader=DEPOSIT 1
 GstExample=12223-5922 RT0001
-GstHeader=    G=GST 5% 
+GstAmountHeader=    G=GST 5% 
 GstNumberHeader=                       GST #
 MinHeadSpacesBeforeCategory=0
 PhoneExample=780-435-5132
