--- a/server-web-api/src/main/resources/config/application.yml
+++ b/server-web-api/src/main/resources/config/application.yml
@@ -55,6 +55,6 @@ application:
         imageRootFolder: /groundtruth/images
     
     process:
-        serverPrefix: openprice-server-ocr-
-        numberOfServers: 2
+        servers:
+            - 146.148.55.8
 
