refactor and add more rcss tests

--- a/parser-stores/src/main/resources/config/RCSS/RCSS1/headerConfig.properties
+++ b/parser-stores/src/main/resources/config/RCSS/RCSS1/headerConfig.properties
@@ -32,7 +32,7 @@ SavingHeader=
 SimilarityThresholdOfTwoStrings=0.65
 Slogan=Big on Fresh, Low on Price
 SloganHeader=Big on Fresh, Low on Price
-StoreBranchHeader=STORE
+StoreIDHeader=STORE:
 SubstringOfUnitPriceLine= . kg @ $ . /kg
 SubstringOfQuantityPriceLine= $. lmt , $ . ea
 SubTotalHeader=SUBTOTAL
