refactor chain recognition code

--- a/parser-stores/src/main/resources/config/RCSS/RCSS1/headerConfig.properties
+++ b/parser-stores/src/main/resources/config/RCSS/RCSS1/headerConfig.properties
@@ -9,7 +9,7 @@ CashierHeader=
 CardHeader=Member card number:
 Chain=RCSS
 ChainIDHeader=
-ChainHeader=
+ChainHeader=RCSS,REAL CANADIAN,Superstore
 CouponHeader=Store Cpn,VENDOR COUPON
 DTFormat=month/day/year hour:minute
 DateHeader=
