--- a/pom.xml
+++ b/pom.xml
@@ -6,12 +6,12 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>1.3.0.M5</version>
+        <version>1.3.0.RC1</version>
     </parent>
 
     <groupId>com.openprice</groupId>
     <artifactId>openprice-project</artifactId>
-    <version>0.0.4</version>
+    <version>0.0.5</version>
     <packaging>pom</packaging>
 
     <name>Open Price Project</name>
@@ -55,17 +55,17 @@
         <docker.image.prefix>openprice</docker.image.prefix>
 
         <spring-restdocs.version>1.0.0.RELEASE</spring-restdocs.version>
-        <hibernate.version>5.0.1.Final</hibernate.version>
-        <handy-uri-templates.version>2.0.3</handy-uri-templates.version>
-        <jjwt.version>0.5.1</jjwt.version>
+        <hibernate.version>5.0.3.Final</hibernate.version>
+        <handy-uri-templates.version>2.1.0</handy-uri-templates.version>
+        <jjwt.version>0.6.0</jjwt.version>
         <google-jimfs.version>1.0</google-jimfs.version>
         <evo-inflector.version>1.2.1</evo-inflector.version>
         <guava.version>18.0</guava.version>
-        <lombok.version>1.16.4</lombok.version>
+        <lombok.version>1.16.6</lombok.version>
         <dbunit.version>2.5.1</dbunit.version>
         <spring-test-dbunit.version>1.2.1</spring-test-dbunit.version>
-        <rest-assured.version>2.5.0</rest-assured.version>
-        <docker-maven-plugin.version>0.3.3</docker-maven-plugin.version>
+        <rest-assured.version>2.7.0</rest-assured.version>
+        <docker-maven-plugin.version>0.3.5</docker-maven-plugin.version>
     </properties>
 
     <!-- Generic Dependencies used by all modules -->
