--- a/rest-user/pom.xml
+++ b/rest-user/pom.xml
@@ -25,6 +25,11 @@
             <artifactId>openprice-process</artifactId>
             <version>${project.version}</version>
         </dependency>
+        <dependency>
+            <groupId>com.openprice</groupId>
+            <artifactId>openprice-parser-stores</artifactId>
+            <version>${project.version}</version>
+        </dependency>
 
         <dependency>
             <groupId>com.openprice</groupId>
