--- a/api-internal/pom.xml
+++ b/api-internal/pom.xml
@@ -14,4 +14,15 @@
     <name>Internal API Module</name>
     <description>OpenPrice Internal Service public API code for other module usage.</description>
 
+    <dependencies>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-web</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-configuration-processor</artifactId>
+            <optional>true</optional>
+        </dependency>
+    </dependencies>
 </project>
